--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,22 @@
 {
-	"manifest_version": 2,
+  "manifest_version": 2,
   "name": "Instagram Download",
   "version": "1.0",
   "content_scripts": [
-  	{
-  		"matches": [ "<all_urls>" ],
-  		"css": [ "style.css" ],
-  		"js": [ "content.js" ]
-  	}
-  ]
+    {
+      "matches": [ "https://www.instagram.com/*" ],
+      "css": [ "style.css" ],
+      "js": [ "content.js" ]
+    }
+  ],
+  "icons": {                  
+      "16": "icon2.png",           
+      "24": "icon2.png",         
+      "32": "icon2.png",
+      "48": "icon2.png",
+      "128": "icon2.png" },
+  "browser_action": {
+      "default_title": "Instagram Download",   
+      "default_popup": "index.html"      
+  }
 }
